merge of the violationsAsErrors config option from the 4.2.x branch
git-svn-id: https://pmd.svn.sourceforge.net/svnroot/pmd/trunk@6902 51baf565-9d33-0410-a72c-fc3788e3496d